brickheadz/css/style.css
/* ... */
#pricingtable .pricing-plan-table {
    padding: 30px 0 0;
}
#pricingtable .pricing-plan-wrap {
    background-color: #fff;
	border-radius: 10px;
	box-shadow: 0 0 5px 1px rgba(62, 62, 62, 0.5);
    color: #222;
	margin: 0 auto 50px;
    max-width: 360px;
    min-height: 425px;
    overflow: hidden;
    text-align: center;
	-webkit-transition:all 0.3s ease 0s;
    -moz-transition:all 0.3s ease 0s;
    -ms-transition:all 0.3s ease 0s;
    -o-transition:all 0.3s ease 0s;
    transition:all 0.3s ease 0s;
}
#pricingtable .pricing-plan-wrap:hover {
    box-shadow: 0 0 10px 1px rgba(62, 62, 62, 0.8);
}
#pricingtable .pricing-plan-header {
	background-color: rgba(62, 62, 62, 0.5);
	color: #000;
    height: 165px;
    margin: 0 0 105px;
    padding: 30px 30px 0;
    position: relative;
}
#pricingtable .pricing-plan-wrap.active .pricing-plan-header {
    background-color: #f1c40f;
}
#pricingtable .pricing-plan-header > h3 {
    font-size: 30px;
    font-weight: bold;
    margin: 0 0 30px;
    text-transform: uppercase;
}
#pricingtable .pricing-plan-wrap.active .pricing-plan-header  {
    color: #fff;
}
#pricingtable .pricing-plan-wrap.active .pricing-plan-header > h3  {
    border-color: #fff;
}
#pricingtable .price-holder {
    background-color: #f1c40f;
    border: 5px solid #fff;
    border-radius: 50%;
    bottom: 0;
    color: #222;
    height: 150px;
    left: 50%;
    margin-bottom: -75px;
    margin-left: -75px;
    padding: 30px 0;
    position: absolute;
    width: 150px;
}
#pricingtable .pricing-plan-wrap:hover .pricing-plan-header, #pricingtable .pricing-plan-wrap:hover .price-holder {
    background-color: #f1c40f;
    color: #fff;
}
#pricingtable .pricing-plan-wrap.active .price-holder {
    background-color: #f1c40f;
}
#pricingtable .price-holder p {
    color: #fff;
    font-size: 42px;
    font-weight: bold;
    margin: -3px 0 0;
}
#pricingtable .pricing-plan-wrap .btn-shutter-out-horizontal {
    margin: 30px 0;
}
#pricingtable .pricing-plan-wrap ul.list-unstyled {
    margin: 30px 30px 0;
}
#pricingtable .pricing-plan-wrap li {
    padding: 10px 0;
}
#pricingtable .price-holder sup {
    font-size: 60%;
    top: -0.6em;
	padding-right: 8px;
}
#pricingtable.pricing-style2 .price-holder sup {
    font-size: 60%;
    top: 0;
	padding-right: 8px;
}
#pricingtable .price-holder sub {
    bottom: 10px;
    color: #fff;
    font-size: 14px;
}

/*
|----------------------------------------------------------------------------
	11. collection
|----------------------------------------------------------------------------
*/
#collection {
	background-color: #FEFEFE;
}
/* category filter */
.filter-section {
	padding-top:20px;
}
.filter-container {
    text-align:center;
}
.filter-section h1 {
    text-align:center
}
.filter-section .filter-container .filter > li {
    margin: 0;
    padding: 0 5px 10px;
}
ul.filter > li > a {
	color: #333;
	border: 1px solid;
    border-radius: 4px;
	display:  block;
    font-size: 20px;
    line-height: 1;
    padding: 6px 12px;
}
ul.filter > li.active a, ul.filter > li > a:hover,ul.filter > li > a:focus {
	background-color: #f1c40f;
	border-color: #f1c40f;
    color: #FFF;
    text-decoration:none;
    outline:none
}
.isotopeContainer {
    margin: 0 0 20px;
}
.collection-wrapper {
    cursor: pointer;
	margin-bottom: 30px;
    overflow: hidden;
    position: relative;
}
.collection-wrapper > img {
	width: 100%;
}
.collection-overlay-inner {
    display: table;
    height: 100%;
    text-align: center;
    width: 100%;
}
.collection-overlay-content {
    display: table-cell;
    vertical-align: middle;
}
.collection-link a , .collection-caption a {
    color: #fff;
	display: inline;
    font-size: 18px;
    margin: 2.5px;
    padding: 2px 6px;
	text-transform: uppercase;
}
.collection-link a {
    border: 1px solid #fff;
}
.collection-link a:hover, .collection-caption a:hover {
	text-decoration: none;
}
.collection-style2 .isotopeContainer {
	margin: 0 15px 50px;
}
.no-space, .no-space .collection-wrapper{
    margin: 0;
    padding: 0;
}

.collection-overlay {
    background-color: rgba(0, 0, 0, 0.8);
    height: 100%;	
    opacity: 0;
	padding: 10%;
    position: absolute;
    text-align: center;
    top: 0;
    -moz-transform: scale(0);
    -webkit-transform: scale(0);
    -o-transform: scale(0);
    -ms-transform: scale(0);
    transform: scale(0);
	-webkit-transition: all 0.6s ease-in-out 0s;
    -moz-transition: all 0.6s ease-in-out 0s;
    -ms-transition: all 0.6s ease-in-out 0s;
    -o-transition: all 0.6s ease-in-out 0s;
    transition: all 0.6s ease-in-out 0s;
    width: 100%;
    z-index: 2;
}
.collection-overlay p, .collection-overlay a {
    position: relative;
    z-index: 4;
}
.collection-overlay::before {
    border-width: 0;
    content: "";
    height: 0;
    left: 10%;
    position: absolute;
    top: 10%;
	-webkit-transition: height 0.5s ease 0.15s;
    -moz-transition: height 0.5s ease 0.15s;
    -ms-transition: height 0.5s ease 0.15s;
    -o-transition: height 0.5s ease 0.15s;
    transition: height 0.5s ease 0.15s;
    width: 0;
    z-index: 3;
}
.collection-overlay::after {
    border-width: 0;
    bottom: 10%;
    content: "";
    height: 0;
    position: absolute;
    right: 10%;	
	-webkit-transition: width 0.1s ease 0.2s;
    -moz-transition: width 0.1s ease 0.2s;
    -ms-transition: width 0.1s ease 0.2s;
    -o-transition: width 0.1s ease 0.2s;
    transition: width 0.1s ease 0.2s;
    width: 0;
    z-index: 3;
}
.collection-wrapper:hover .collection-overlay::before {
    border-right: 1px solid #fff;
    border-top: 1px solid #fff;
    height: 80%;	
	-webkit-transition: width 0.1s ease 0.5s, height 0.1s ease 0.6s;
    -moz-transition: width 0.1s ease 0.5s, height 0.1s ease 0.6s;
    -ms-transition: width 0.1s ease 0.5s, height 0.1s ease 0.6s;
    -o-transition: width 0.1s ease 0.5s, height 0.1s ease 0.6s;
    transition: width 0.1s ease 0.5s, height 0.1s ease 0.6s;
    width: 80%;
}
/* ... */

